--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,14 @@
 @font-face {
-  font-family: charter-regular;
+  font-family: charter;
   src: url("../fonts/charter-regular.otf");
   font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: charter-italic;
+  src: url("../fonts/charter-italic.otf");
+  font-style: italic;
   font-weight: 400;
 }
 
@@ -9,8 +16,16 @@
   font-family: character-bold;
   src: url("../fonts/charter-bold.otf");
   font-style: normal;
-  font-weight: 600;
+  font-weight: bold;
 }
+
+@font-face {
+  font-family: charter-italic-bold;
+  src: url("../fonts/charter-bold-italic.otf");
+  font-size: italic;
+  font-weight: bold;
+}
+
 
 :root {
   font-size: 16px;
@@ -21,7 +36,7 @@
 
 body {
   color: var(--gray30);
-  font-family: charter-regular;
+  font-family: charter;
 }
 
 a {
