--- a/css/styles-logicos.css
+++ b/css/styles-logicos.css
@@ -26,7 +26,6 @@
   font-weight: bold;
 }
 
-
 :root {
   font-size: 16px;
   --white30: white;
@@ -46,20 +45,20 @@ a {
 }
 
 .header {
-  position: sticky;
-  inset-block-start: 0;
-}
+  /* position: sticky;
+  inset-block-start: 0; */
+} 
 
 .header-content {
-  position: relative;
+  padding-inline: 20px;
 }
 
 header {
   font-size: 14px;
   color: var(--white);
-  position: absolute;
+  /* position: absolute;
   inset-inline-start: -188px;
-  inline-size: 208px;
+  inline-size: 208px; */
 }
 
 header li {
@@ -85,8 +84,9 @@ nav details summary{
 } */
 
 h1 {
-  font-size: 3.75rem;
-  margin-block-start: 64px;
+  /* font-size: 3.75rem; */
+  font-size: 40px;
+  margin-block-start: 20px;  
   margin-block-end: 16px;
 }
 
@@ -121,8 +121,7 @@ hr {
 }
 
 .hero {
-  width: 100%;
-  height: 21.875rem;
+  block-size: 50px;
   background: linear-gradient(96.07deg, #314755 30.63%, #26A0DA 102.18%);
 }
 
@@ -154,8 +153,8 @@ hr {
 }*/
 
 blockquote {
-  margin-block-start: 80px;
-  margin-block-end: 63px;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
   padding-block-start: 24px;
   padding-block-end: 24px;
   padding-inline-start: 24px;
@@ -241,4 +240,36 @@ form {
 
 .form input::placeholder {
   color: var(--white20);
+}
+
+@media screen and (min-width: 1366px) {
+  .hero {
+    block-size: 350px;
+  }
+
+  h1 {
+    font-size: 60px;
+    margin-block-start: 64px;
+  }
+  .header {
+    position: sticky;
+    inset-block-start: 0;
+  }
+
+  .header-content {
+    position: relative;
+    margin-block-end: 45px;
+  }
+
+  header {
+    position: absolute;
+    inset-inline-start: -188px;
+    inline-size: 208px;
+  }
+
+  blockquote {
+    margin-block-start: 80px;
+    margin-block-end: 63px;
+    
+  }
 }
